                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2015-01-xx

    * Muldis::D version 0.201 is released on CPAN as
    Muldis-D-0.201.tar.gz.

2015-01-22

    * Muldis::D version 0.200 is released on CPAN as
    Muldis-D-0.200.tar.gz.

    * The main purpose of this release is to clean up and refresh the main
    documentation following the rough file reorganization of release
    0.148.2, to reflect the Muldis-D distribution's new status of
    temporarily containing two Muldis D spec versions, 0.200+ and
    0.148.2, where the former is a replacing rewrite of the latter.

    * Split lib/Muldis/D.pm into itself and new file
    lib/Muldis/D/Outdated.pod where the latter now has the top-level
    directory of the other Outdated/* files that used to be in the PREFACE
    section of the former, and the former now just links to the latter.
    Also updated the README file to no longer list the few dozen
    lib/Muldis/D/Outdated/* files in DOCUMENTATION READING ORDER, instead
    referring readers to Outdated.pod for a list.

    * (D.pm)  Rewrote about a third of the VERSIONING pod section and also
    updated the DESCRIPTION section.  The Muldis D language spec is now
    formally about "Muldis D Plain Text" and not just "Muldis D"; as such,
    its fully-qualified language name also now has more parts.  Muldis D
    language names now have 5 parts usually: Family Name, Syntax Name,
    Script Name, Authority, Version Number, in that order.  That is what
    code files declare.  This being said, the Muldis D language spec name
    excludes the Script Name part as it is effectively a wildcard there.

    * (D.pm,SeeAlso.pod,README,Basics.pod) Replaced any refs in this distro
    to the obsolete Muldis Rosetta with its replacement Muldis::D::RefEng.
    Muldis::D::RefEng is still under development and has no CPAN release