@@ -34,6 +34,7 @@ lib/Muldis/D/Outdated/Dialect/PTMD_STD.pod
 lib/Muldis/D/Outdated/Ext/Counted.pod
 lib/Muldis/D/Outdated/Ext/Spatial.pod
 lib/Muldis/D/Outdated/Ext/Temporal.pod
+lib/Muldis/D/Plain_Text.pod
 lib/Muldis/D/SeeAlso.pod
 LICENSE/GPL
 Makefile.PL
