@@ -19,10 +19,11 @@ this distribution, I recommend doing so in this order:
      1.       README
      2. (opt) Changes
      3.       lib/Muldis/D.pm
-     4.       lib/Muldis/D/Outdated.pod
+     4.       lib/Muldis/D/Plain_Text.pod
+     5.       lib/Muldis/D/Outdated.pod
                 ... which lists a reading order for lib/Muldis/D/Outdated/*
-     5.       lib/Muldis/D/SeeAlso.pod
-     6. (opt) TODO
+     6.       lib/Muldis/D/SeeAlso.pod
+     7. (opt) TODO
 
 Then you can carry on with anything else.
 
