@@ -14,6 +14,20 @@ resources of everyone else.
 
 ----------
 
+* Let routines/types/etc have traits like public/private whose effect is
+making them visible or invisible to partially-qualified identifier
+resolution to identity identifier operations.  If not explicitly stated,
+a material explicitly named by a user is public by default, whereas one
+whose name is generated or that is embedded in another, the latter is
+private by default.  Due to this feature, splitting a package into a
+private internals and public wrapper should not be necessary.
+That being said, support for declaration of multiple packages within a
+single module / .mdpt file should be supported, where a common use of said
+may be private/public separation.
+Note that the public/private trait would attach to the namespace/name of
+the material, not to its definition; eg, it belongs on the left hand side
+of the eg "name ::= function...".
+
 * Or we CAN specify a "complete" grammar but that as written you couldn't
 actually execute it without help, eg interpreting several barewords in a row,
 and so it is still more illustrative; you wouldn't gen a parser from it.
@@ -428,13 +442,13 @@ with a digit, the latter being illegal bareword identifier syntax.
                 |    Note that any consecutive single-quoted tokens are treated as 1 token.
     Ratio       | 5/3 or 3.14159
     Float       | 29*10**30 or 4.5209E19 but how to not interp first as Integer expr?
+    Quantity    | expr+expr or expr-expr or expr*expr or expr/expr or
+                |    expr**posint-expr where at least one expr is a (Singleton)
+                |    Reference or a Quantity eg 5.7*$Meter/($Second**2)
     Interval    | expr..expr  or expr^..^expr etc
     Set         | {expr,...} or ({expr,...}) to disambiguate within recipe block
     Relation    | \@{{lit:expr,...},...} or \@[lit,...]:{[expr,...],...}
     Dictionary  | \~{expr:expr,...} or something
-    Quantity    | expr+expr or expr-expr or expr*expr or expr/expr or
-                |    expr**posint-expr where at least one expr is a (Singleton)
-                |    Reference or a Quantity eg 5.7*$Meter/($Second**2)
     SC_Heading  | \~{lit,...} - T/R heading as userland value - arg for project/etc
                 |    and SC_Name is one with =1 elem, eg \~{lit}
     SC_Renaming | \<-{lit:lit,...} - use in routine predicate defs a lot to normalize params, arg for rename
