@@ -7,6 +7,10 @@
     * Muldis::D version 0.201 is released on CPAN as
     Muldis-D-0.201.tar.gz.
 
+    * Add new file lib/Muldis/D/Plain_Text.pod which describes the syntax
+    of Muldis D Plain Text and likely provides one of the best ways to
+    familiarize with the language.
+
 2015-01-22
 
     * Muldis::D version 0.200 is released on CPAN as
